tests/ui/traits/maybe-trait-bounds-forbidden-locations.stderr
error[E0658]: `?Trait` is not permitted in supertraits
  --> $DIR/maybe-trait-bounds-forbidden-locations.rs:10:11
   |
LL | trait Tr: ?Sized {}
   |           ^^^^^^
   |
   = note: traits are `?Sized` by default
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `?Trait` is not permitted in trait object types
  --> $DIR/maybe-trait-bounds-forbidden-locations.rs:13:20
   |
LL | type A1 = dyn Tr + (?Sized);
   |                    ^^^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `?Trait` is not permitted in trait object types
  --> $DIR/maybe-trait-bounds-forbidden-locations.rs:15:28
   |
LL | type A2 = dyn for<'a> Tr + (?Sized);
   |                            ^^^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
